# temporal-global-travel-agency

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pants.toml  pyproject.toml
.github/workflows/: ci-tests-coverage-and-app-image.yml
apis/airliner/v1/: flight_plan.schema.json
apis/citytaxi/v1/: taxi_plan.schema.json
apis/travelagent/v1/: journey.schema.json
apps/airliner/: Dockerfile  Makefile  README.md  pyproject.toml
apps/airliner/src/: BUILD
apps/airliner/src/airliner/: main.py
apps/airliner/tests/: BUILD  test_main.py
apps/airliner/tests/fixtures/: flight_plan.json
apps/bikerental/: Dockerfile  Makefile  README.md  pyproject.toml
apps/bikerental/src/: BUILD
apps/bikerental/tests/: BUILD  test_main.py
apps/citytaxi/: Dockerfile  Makefile  README.md  pyproject.toml
apps/citytaxi/src/: BUILD
apps/citytaxi/src/citytaxi/: main.py
apps/citytaxi/tests/: BUILD  test_main.py
apps/demo-app/: Dockerfile  README.md  pyproject.toml
apps/demo-app/src/demo_app/: main.py
apps/demo-app/tests/: test_main.py
apps/tourguide/: Dockerfile  Makefile  README.md  pyproject.toml
apps/tourguide/src/: BUILD
apps/tourguide/tests/: BUILD  test_main.py
apps/travelagent/: Dockerfile  Makefile  README.md  pyproject.toml
apps/travelagent/src/: BUILD
apps/travelagent/src/travelagent/: activities.py  main.py  starter.py  worker.py  workflows.py
apps/travelagent/tests/: BUILD  test_activities.py  test_main.py  test_starter.py  test_worker.py  test_workflows.py
scripts/: generate_api_models.py  install_workspace_deps.py  validate_api_schemas.py
scripts/tests/: test_generate_api_models.py  test_install_workspace_deps.py  test_validate_api_schemas.py
