[project]
name = "roche-mono"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pre-commit>=4.2.0", "pytest>=8.4.2", "pytest-cov>=7.0.0"]

[tool.uv.workspace]
members = ["apps/*", "pkgs/*"]
exclude = ["pkgs/generated"]


[tool.pytest.ini_options]
testpaths = [
	"pkgs/converters/tests",
]
pythonpath = ["pkgs/converters/src"]

[tool.coverage.run]
omit = [
	"*/tests/*",
	"*/test_*.py",
]

[tool.coverage.report]
omit = [
	"*/tests/*",
	"*/test_*.py",
]
