[project]
name = "airliner"
version = "0.1.0"
description = "Airliner app using shared converters and quotes packages"
authors = [{ name = "monorepo" }]
dependencies = ["converters", "quotes"]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airliner"]

[tool.uv.sources]
converters = { workspace = true }
quotes = { workspace = true }
