[project]
name = "demo-app"
version = "0.1.0"
description = "Demo app"
authors = [{ name = "monorepo" }]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_app"]
