[project]
name = "tourguide"
version = "0.1.0"
description = "tourguide app using shared converters package"
authors = [{ name = "monorepo" }]
dependencies = ["converters"]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tourguide"]

[tool.uv.sources]
converters = { workspace = true }
