[project]
name = "travelagent"
version = "0.1.0"
description = "Temporal.io travelagent app with a hello-world workflow"
authors = [{ name = "monorepo" }]
dependencies = ["temporalio>=1.8.0"]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/travelagent"]
